samples/_failures_safe/1761394502_84a10c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cec9b48f.c: In function ‘main’:
./samples/SAFE/__tmp_cec9b48f.c:163:5: error: expected expression at end of input
  163 |     if (!fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_cec9b48f.c:163:5: error: expected declaration or statement at end of input
